# nest-in-situ-vis

./: .gitattributes  .gitignore  CMakeLists.txt  CPPLINT.cfg  LICENSE  README.md
cmake/: ConfigureFiles.cmake  catch.cmake  (+7 more)
niv/: CMakeLists.txt
niv/helper_apps/: CMakeLists.txt
niv/helper_apps/src/: shared_memory.cpp
niv/include/niv/: analysis_backend.hpp  analysis_device.hpp  analysis_receiver.hpp  conduit_receiver.hpp  local_node_storage.hpp  multimeter.hpp  nest_in_situ_vis.hpp  nest_receiver.hpp  nest_test_data.hpp  niv.hpp  node_storage.hpp  receiving_relay_shared_memory.hpp  recorder.hpp  relay_shared_memory.hpp  sending_relay_shared_memory.hpp  shared_memory.hpp  shared_memory_access.hpp  shared_memory_base.hpp  shared_memory_segment.hpp  shared_memory_synchronization.hpp  shared_memory_synchronization_access.hpp  shared_memory_synchronization_object.hpp  spike_detector.hpp  synchronized_aggregating_receiver.hpp  synchronized_relay_shared_memory.hpp  synchronized_relay_shared_memory_access.hpp  synchronized_relay_shared_memory_segment.hpp  vis_multimeter.hpp
niv/include/niv/consumer/: analysis_backend.hpp  analysis_device.hpp  analysis_receiver.hpp  arbor_multimeter.hpp  backend.hpp  device.hpp  multimeter.hpp  nest_multimeter.hpp  receiver.hpp  synchronized_aggregating_receiver.hpp  vis_multimeter.hpp
niv/include/niv/exchange/: node_storage.hpp  relay_shared_memory.hpp  shared_memory.hpp  shared_memory_synchronization.hpp
niv/include/niv/producer/: arbor_multimeter.hpp  device.hpp  multimeter.hpp  nest_multimeter.hpp  recorder.hpp  sender.hpp  spike_detector.hpp
niv/include/niv/testing/: conduit_schema.hpp  data.hpp  helpers.hpp  nest_test_data.hpp
niv/src/: analysis_backend.cpp  analysis_device.cpp  conduit_receiver.cpp  multimeter.cpp  nest_in_situ_vis.cpp  nest_receiver.cpp  nest_test_data.cpp  niv.cpp  node_storage.cpp  receiving_relay_shared_memory.cpp  recorder.cpp  relay_shared_memory.cpp  sending_relay_shared_memory.cpp  shared_memory.cpp  shared_memory_access.cpp  shared_memory_base.cpp  shared_memory_segment.cpp  shared_memory_synchronization.cpp  shared_memory_synchronization_access.cpp  shared_memory_synchronization_object.cpp  spike_detector.cpp  synchronized_aggregating_receiver.cpp  synchronized_relay_shared_memory.cpp  vis_multimeter.cpp
niv/src/consumer/: analysis_backend.cpp  analysis_device.cpp  arbor_multimeter.cpp  backend.cpp  device.cpp  multimeter.cpp  nest_multimeter.cpp  receiver.cpp  synchronized_aggregating_receiver.cpp  vis_multimeter.cpp
niv/src/exchange/: relay_shared_memory.cpp  shared_memory.cpp  shared_memory_synchronization.cpp
niv/src/producer/: arbor_multimeter.cpp  device.cpp  multimeter.cpp  nest_multimeter.cpp  recorder.cpp  sender.cpp  spike_detector.cpp
niv/src/testing/: data.cpp  helpers.cpp  nest_test_data.cpp
niv/tests/: CMakeLists.txt
niv/tests/src/: conduit_node_helper.hpp  nest_data.hpp  test_analysis_backend.cpp  test_analysis_device.cpp  test_conduit.cpp  test_conduit_receiver.cpp  test_local_node_storage.cpp  test_multimeter.cpp  test_nest_in_situ_vis.cpp  test_nest_receiver.cpp  test_node_storage.cpp  test_relay_shared_memory.cpp  test_relay_shared_memory_mutex.cpp  test_relay_shared_memory_threaded.cpp  test_shared_memory.cpp  test_shared_memory_access.cpp  test_shared_memory_segment.cpp  test_shared_memory_synchronization.cpp  test_spike_detector.cpp  test_synchronized_aggregating_receiver.cpp  test_synchronized_relay_shared_memory.cpp  test_synchronized_relay_shared_memory_mutex.cpp  test_synchronized_relay_shared_memory_threaded.cpp  test_vis_multimeter.cpp  tests.cpp
niv/tests/src/consumer/: test_arbor_multimeter.cpp  test_backend.cpp  test_device.cpp  test_integration.cpp  test_multimeter.cpp  test_nest_multimeter.cpp  test_receiver.cpp
niv/tests/src/exchange/: test_node_storage.cpp  test_relay_shared_memory.cpp  test_relay_shared_memory_mutex.cpp  test_relay_shared_memory_threaded.cpp  test_shared_memory.cpp  test_shared_memory_synchronization.cpp
niv/tests/src/producer/: test_arbor_multimeter.cpp  test_multimeter.cpp  test_nest_multimeter.cpp  test_sender.cpp  test_spike_detector.cpp
niv/tests/test_utilities/: cout_capture.hpp  vector_all_nan_or_empty.hpp
npv/: CMakeLists.txt
npv/include/npv/: nest_python_vis.hpp  npv.hpp
npv/src/: nest_python_vis.cpp  npv.cpp
npv/tests/: CMakeLists.txt
npv/tests/src/: test_nest_python_vis.cpp  test_npv.cpp  tests.cpp
npv/tests/test_utilities/: cout_capture.hpp
pyniv/: CMakeLists.txt
pyniv/src/: CMakeLists.txt  __init__.py  analysis_backend.cpp  analysis_device.cpp  analysis_device.hpp  analysis_receiver.cpp  analysis_receiver.hpp  backend.cpp  conduit_data.cpp  conduit_data.hpp  conduit_data_sender.cpp  conduit_data_sender.hpp  conduit_node.cpp  conduit_receiver.cpp  device.cpp  dummy_analysis_backend.cpp  dummy_analysis_backend.hpp  multimeter.cpp  multimeter.hpp  nest_in_situ_vis.cpp  nest_test_data.cpp  pyniv.cpp  pyniv.hpp  receiver.cpp  synchronized_aggregating_receiver.cpp  synchronized_receiver.cpp  synchronized_receiver.hpp  synchronized_sender.hpp  syncronized_sender.cpp  vis_multimeter.cpp  vis_multimeter.hpp
pyniv/src/conduit/: CMakeLists.txt  __init__.py  conduit.cpp  node.cpp
pyniv/src/consumer/: CMakeLists.txt  __init__.py  arbor_multimeter.cpp  backend.cpp  consumer.cpp  device.cpp  device.hpp  multimeter.cpp  nest_multimeter.cpp  receiver.cpp
pyniv/src/testing/: CMakeLists.txt  __init__.py  data.cpp  helpers.cpp  nest_test_data.cpp  testing.cpp
pyniv/tests/: CMakeLists.txt
pyniv/tests/src/: test_conduit_node.py  test_cout_capture.py  test_pynpv.py
pyniv/tests/src/consumer/: test_arbor_multimeter.py  test_backend.py  test_device.py  test_integration.py  test_multimeter.py  test_nest_multimeter.py  test_receiver.py
pynpv/: CMakeLists.txt
pynpv/src/: conduit_data.cpp  conduit_data.hpp  nest_python_vis.cpp  nest_python_vis.hpp  npv.cpp  pynpv.cpp  pynpv.hpp
pynpv/tests/: CMakeLists.txt
pynpv/tests/src/: test_pynpv.py
pytest_utilities/: CMakeLists.txt
pytest_utilities/src/: cout_capture.cpp
(+20 files in other folders)
